# gameboy_for_eos

./: .gitignore  CMakeLists.txt  dev_run.sh  toolchain.cmake
script/: eosctl.py
src/: CMakeLists.txt  main.c
src/Apps/: app_list.c
src/Apps/Gameboy/: CMakeLists.txt  main.c
src/Apps/Gameboy/gb/: cpu.c  lcd.c  rom.c  sdl.c  sdl.h
src/Corelib/: _core_config.h  crt0.c  debug.c  debug.h
src/Fs/: fs_utils.c  fs_utils.h  sys_conf.c  sys_conf.h
src/Graphic/: filefont.c  framebuf.h  screen.c  screen.h
src/Graphic/UI/: ui_const.c  ui_const.h  ui_dialog.c  ui_dialog.h  ui_file_selector.c  ui_file_selector.h  ui_input_number.c  ui_input_number.h  ui_menu.c  ui_menu.h  ui_sysbar.c  ui_sysbar.h  ui_utils.c  ui_utils.h
src/Keyboard/: keyboard.c  keyboard.h
src/Time/: sys_clock.c  sys_clock.h
src/Utils/Collectc/: License
src/corelib/: _core_config.h  crt0.c
